[tool.poetry]
name = "mm-battle-simulator"
version = "0.1.0"
description = ""
authors = ["Peter Májek <peter.majek@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^1.26.3"
pandas = "^2.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
